--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,6 +16,7 @@
   --color-primary: #008EC4;
   --color-hover_color: #0078A4;
   --color-title_color: #003245;
+  --color-about_title: #005576;
 }
 
 @media (prefers-color-scheme: dark) {
